# winrm-molecule-forkbomb-demo

./: .ansible-lint  .envrc  .sops.yaml  .yamllint  404.html  README.md  flake.nix  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
ad-lockout-prevention/: index.html
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml  pressure-test.yml
ansible/molecule/: inventory.yml
ansible/playbooks/: audit-winrm.yml  benchmark.yml  monitor-connections.yml  site.yml
benchmark-results/: baseline-audit-20260313.md  finding-winrm-restart-20260313.md  forkbomb-demo-20260313.md  index.html
dhall/: benchmarks.dhall  hosts.dhall  package.dhall  quotas.dhall  render-benchmarks.dhall  render-quotas.dhall  render-roles.dhall  roles.dhall
dhall/output/: .gitignore
dhall/types/: BenchmarkProfile.dhall  Host.dhall  (+3 more)
docs/: ad-lockout-prevention.md  benchmark-results.md  forkbomb-mechanism.md  index.md  parallelism-patterns.md  plugin-quota-analysis.md  pywinrm-vs-pypsrp.md  upstream-issues.md  winrm-quota-research.md  winrm-quotas.md  winrm-server-defaults.md
forkbomb-mechanism/: index.html
parallelism-patterns/: index.html
plugin-quota-analysis/: index.html
pywinrm-vs-pypsrp/: index.html
scripts/: benchmark-forkbomb.sh  molecule-run.sh  setup-env.sh  start-tunnel.sh
search/: search_index.json
secrets/: winrm-creds.enc.yaml
tests/: conftest.py  test_dhall.py  test_structure.py
upstream-issues/: index.html
winrm-quota-research/: index.html
winrm-quotas/: index.html
winrm-server-defaults/: index.html
(+56 files in other folders)
